add distances and simple classifiction

--- a/l01_knn/code/KNN.ipynb
+++ b/l01_knn/code/KNN.ipynb
@@ -235,7 +235,7 @@
     "print(X.shape, y.shape)\n",
     "\n",
     "df_describe = pd.DataFrame(y)\n",
-    "df_describe.value_counts()"
+    "df_describe.value_counts()\n"
    ]
   },
   {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "505e2c4b-1cfe-4e4a-8002-d9ce089d100e",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "dd81b766-5de2-4f62-82cf-8b6bd52002db",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "8ed08354-d0ef-497a-9d9c-b17c92b7bef9",
    "metadata": {},
    "outputs": [
@@ -450,14 +450,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "379 ms ± 38.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "52.7 ms ± 2.78 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "367 ms ± 12.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "102 ms ± 6.36 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "52.2 ms ± 1.98 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit knn_classifier.compute_distances_two_loops(binary_test_X)\n",
-    "#%timeit knn_classifier.compute_distances_one_loop(binary_test_X)\n",
+    "%timeit knn_classifier.compute_distances_one_loop(binary_test_X)\n",
     "%timeit knn_classifier.compute_distances_no_loops(binary_test_X)"
    ]
   },
@@ -471,13 +472,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "9ca2679e-c731-467b-94b5-91a3a0641d7e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: predict_labels_binary in knn.py\n",
     "prediction = knn_classifier.predict(binary_test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8625b06b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(101, 784)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_test_X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "00bfd706",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(101, 911)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dists.shape"
    ]
   },
   {
