r2, MSE, MAE added

--- a/l01_knn/code/KNN.ipynb
+++ b/l01_knn/code/KNN.ipynb
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ed303ead",
+   "id": "6dccb7bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "50f9af87",
+   "id": "53b7a509",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2bc6272",
+   "id": "a707311d",
    "metadata": {},
    "source": [
     "Используем `accuracy_score`, так как по нему можно узнать сколько правильных предсказаний у нас среди всех предскзаний. (\"Accuracy is the probability that the model prediction is correct. [link](https://arxiv.org/pdf/2008.05756.pdf#:~:text=Accuracy%20is%20one%20of%20the,computed%20from%20the%20confusion%20matrix.&text=The%20formula%20of%20the%20Accuracy,confusion%20matrix%20at%20the%20denominator.))"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f8ff32ec",
+   "id": "c51581ce",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4932b88b",
+   "id": "1456efb3",
    "metadata": {},
    "source": [
     ">> Имеет смысл использовать 9-13 ближайших соседей. Будем использовать 10."
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4c39aa27",
+   "id": "a9b0ee72",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "790a9718",
+   "id": "fb2dc2cb",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b050c827",
+   "id": "9eaaa4fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "e9239b5f",
+   "id": "399ab46d",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "f15a6ae9",
+   "id": "c6b4f3da",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1033c544",
+   "id": "d17a31d2",
    "metadata": {},
    "source": [
     "> Имеет смысл использовать около 10 ближайших соседей."
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "94e7a405",
+   "id": "4232e2f3",
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "bfd9bca6",
+   "id": "5bbca94b",
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a81b00c9",
+   "id": "cb7d4e5f",
    "metadata": {},
    "source": [
     ">  442 наблюдения, 10 столбцов в X и 1 y"
@@ -1442,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "4083b5d1",
+   "id": "39df1987",
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19427e50",
+   "id": "7d59968e",
    "metadata": {},
    "source": [
     "> Данные в X были стандартизованы самим sklearn, это можно увидеть на боксплоте (изначально возраст был в годах, ИМТ в своих единицах итд.)"
@@ -1480,38 +1480,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "c0836d31",
+   "execution_count": 135,
+   "id": "600f561c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "age    0\n",
-       "sex    0\n",
-       "bmi    0\n",
-       "bp     0\n",
-       "s1     0\n",
-       "s2     0\n",
-       "s3     0\n",
-       "s4     0\n",
-       "s5     0\n",
-       "s6     0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 442 entries, 0 to 441\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   age     442 non-null    float64\n",
+      " 1   sex     442 non-null    float64\n",
+      " 2   bmi     442 non-null    float64\n",
+      " 3   bp      442 non-null    float64\n",
+      " 4   s1      442 non-null    float64\n",
+      " 5   s2      442 non-null    float64\n",
+      " 6   s3      442 non-null    float64\n",
+      " 7   s4      442 non-null    float64\n",
+      " 8   s5      442 non-null    float64\n",
+      " 9   s6      442 non-null    float64\n",
+      "dtypes: float64(10)\n",
+      "memory usage: 34.7 KB\n"
+     ]
     }
    ],
    "source": [
-    "X.isnull().sum()"
+    "X.info()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "02d87a95",
+   "id": "575eb1ba",
    "metadata": {},
    "source": [
     "> Нулевых значений и не числовых значений в X нет."
@@ -1520,7 +1523,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "badf169b",
+   "id": "fdafa116",
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "880d73f1",
+   "id": "28614ba6",
    "metadata": {},
    "source": [
     "> Для `y` то же, он не был стандартизован, пропущенных и нечисловых значений также нет:"
@@ -1692,8 +1695,10 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "3dea214b",
-   "metadata": {},
+   "id": "6d9e9a0b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1720,8 +1725,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "f461d040",
+   "execution_count": 138,
+   "id": "c4a75b25",
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1735,7 @@
        "0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1741,7 +1746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8378feff",
+   "id": "0b95fddc",
    "metadata": {},
    "source": [
     "> Корреляционная матрица:"
@@ -1750,7 +1755,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "401b7f19",
+   "id": "294967b4",
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3188c22d",
+   "id": "05af560c",
    "metadata": {},
    "source": [
     "#### Train test split"
@@ -1793,7 +1798,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "7454817c",
+   "id": "3193a19a",
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ede4641",
+   "id": "61694cdf",
    "metadata": {},
    "source": [
     "\n",
@@ -1857,7 +1862,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "53174063",
+   "id": "07f9cdee",
    "metadata": {},
    "outputs": [
     {
@@ -1918,6 +1923,27 @@
    "outputs": [],
    "source": [
     "# TODO: r_squared, mse, mae in metrics.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "b3b423a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2963871541206766"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(test_y, knr_predictions)"
    ]
   },
   {
