--- a/l2_linmodels_GD/code/Linear_models.ipynb
+++ b/l2_linmodels_GD/code/Linear_models.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a204ec7b-1f3c-439c-8a9e-0abbe270e696",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "340f9411-bcff-4fae-a4a7-3c42361de2f4",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cb249259-87ef-456f-a904-402b90c82521",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "aa083d99-7a02-4b6e-8548-9c9ebee381c7",
    "metadata": {},
    "outputs": [],
@@ -157,12 +157,8 @@
     "        :param w: np.array[2]: float вектор из 2-х элементов\n",
     "        :return: np.array[2]: float вектор из 2-х элементов\n",
     "    \"\"\"\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    YOUR CODE IS HERE\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    pass"
+    "    return np.array([np.sin(2*a[0]), np.sin(2*a[1])])\n",
+    "    "
    ]
   },
   {
@@ -175,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "29698da3-07ca-45f6-baff-dd49c82db8c8",
    "metadata": {},
    "outputs": [],
@@ -1057,7 +1053,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1071,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
