add bce and bce grad

--- a/l2_linmodels_GD/code/Linear_models.ipynb
+++ b/l2_linmodels_GD/code/Linear_models.ipynb
@@ -25,7 +25,6 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import seaborn as sns\n",
     "import random\n",
     "import pandas as pd\n",
@@ -752,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4f757636",
+   "id": "30828e8d",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1976c8eb",
+   "id": "53f6a9ba",
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "008992c7",
+   "id": "9a262d58",
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e98bc3eb",
+   "id": "89e36117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "471ec2cc",
+   "id": "1dcfe7e6",
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39eba8c",
+   "id": "cddb8082",
    "metadata": {},
    "source": [
     "##### W/o scaling"
@@ -1281,7 +1280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd09b0aa",
+   "id": "8440bea2",
    "metadata": {},
    "source": [
     "##### Normalizing"
@@ -1290,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a5ab04f9",
+   "id": "9bd067c1",
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb888dda",
+   "id": "40541f50",
    "metadata": {},
    "source": [
     "##### Multicollinearity"
@@ -1327,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "593e194a",
+   "id": "eed1fbe2",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "426e9fc0",
+   "id": "a4e08760",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "866dfd86",
+   "id": "a4109dbe",
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "007bd79d",
+   "id": "d9186bce",
    "metadata": {},
    "source": [
     "VIF > 5 для TAX и RAD."
@@ -1527,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "89ceaf8a",
+   "id": "e3b86688",
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0873821a",
+   "id": "233dd6e7",
    "metadata": {},
    "source": [
     "##### Drop TAX"
@@ -1570,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "645cc64e",
+   "id": "34594814",
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6eaa280d",
+   "id": "9c601adf",
    "metadata": {},
    "outputs": [
     {
@@ -1631,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1c2764e8",
+   "id": "f1b4dbc0",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73cf3b6",
+   "id": "78d48a8b",
    "metadata": {},
    "source": [
     "Кааааапельку лучше."
@@ -1667,7 +1666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "853b86a2",
+   "id": "d3de4058",
    "metadata": {},
    "source": [
     "##### Drop RAD"
@@ -1676,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "fbf695de",
+   "id": "cd3681e3",
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "bb3174e1",
+   "id": "2a254426",
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c910d9e1",
+   "id": "9ee1017d",
    "metadata": {},
    "source": [
     "> все меньше 5."
@@ -1745,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d676ba95",
+   "id": "dc803f58",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9700100f",
+   "id": "8454391c",
    "metadata": {},
    "source": [
     "> Лучше не стало.\n",
@@ -1783,7 +1782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5569498",
+   "id": "2ea1aacc",
    "metadata": {},
    "source": [
     "##### Best Model"
@@ -1792,7 +1791,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6690d02a",
+   "id": "775fa1e2",
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "032ffe45",
+   "id": "4d805b3d",
    "metadata": {},
    "source": [
     "*R-squared:                       0.756*\n",
@@ -1866,7 +1865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45cc0307",
+   "id": "95c6d41e",
    "metadata": {},
    "source": [
     "#### Удалим из модели и TAX и AGE"
@@ -1875,7 +1874,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b48a669f",
+   "id": "a41cde82",
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +1901,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c1270aba",
+   "id": "fb6803d5",
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b440501",
+   "id": "f450f85d",
    "metadata": {},
    "source": [
     "Модель стала с использованием LinearRegression совсем немного лучше."
@@ -1939,7 +1938,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "99ae2f6b",
+   "id": "ce0ae004",
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +1999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7888fdd",
+   "id": "eefa67ba",
    "metadata": {},
    "source": [
     "Уберем также и INDUS:"
@@ -2009,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6894b95b",
+   "id": "afcd9cd5",
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2037,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5b12884d",
+   "id": "5b57c908",
    "metadata": {},
    "outputs": [
     {
@@ -2067,7 +2066,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "02e90d13",
+   "id": "68d71e4b",
    "metadata": {},
    "outputs": [
     {
@@ -2127,7 +2126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3cfcfac",
+   "id": "65fdee60",
    "metadata": {},
    "source": [
     "По сравнению с моделью, в которой мы используем все достуные данные (Mean squared error: 46.590, Coefficient of determination: 0.5671), модель, в которой мы используем только значимо влияющие признаки и не используем коррелирующие (т.е., не используем AGE, INDUS и TAX) -- лучше (Mean squared error: 46.083, Coefficient of determination: 0.5718), но не очень сильно."
@@ -2146,13 +2145,13 @@
    "id": "98eb7773-98ab-4451-b83d-6c0c4288137a",
    "metadata": {},
    "source": [
-    "Логистическая регрессия не очень сильно отличается от обычной линейной регрессии и используется в задах классификации. Так как здесь мы снова будем пользоваться градиентным спуском, то нужно определить функцию потерь и ее градиент. Одним из самых популярных вариантов в задаче бинарной классификации является бинарная кросс-энтропия (BCE).\n",
+    "Логистическая регрессия не очень сильно отличается от обычной линейной регрессии и используется в задачах классификации. Так как здесь мы снова будем пользоваться градиентным спуском, то нужно определить функцию потерь и ее градиент. Одним из самых популярных вариантов в задаче бинарной классификации является бинарная кросс-энтропия (BCE).\n",
     "\n",
     "$$\\mathcal L_{BCE}(y, \\hat y) = -\\sum_i \\left[y_i\\log\\sigma(\\hat y_i) + (1-y_i)\\log(1-\\sigma(\\hat y_i))\\right].$$\n",
     "\n",
     "где $y$ это  таргет желаемого результата и $\\hat y$ является выходом модели. $\\sigma$ - это [*логистическая* функция](https://en.wikipedia.org/wiki/Sigmoid_function), который преобразует действительное число $\\mathbb R$ в вероятность $[0,1]$.\n",
     "\n",
-    "Единственная проблема данной функции это возможность получить 0 под знаком логарифма, что не очень хорошо. Попробуем справить с этим \"в лоб\". Скажем, что наши предсказания могут принимать значения от 0 + eps до 1 - eps, где eps очень маленькое число."
+    "Единственная проблема данной функции это возможность получить 0 под знаком логарифма, что не очень хорошо. Попробуем справиться с этим \"в лоб\". Скажем, что наши предсказания могут принимать значения от 0 + eps до 1 - eps, где eps очень маленькое число."
    ]
   },
   {
@@ -2167,17 +2166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "c3632a03-f8e3-43e1-9949-2b8019d4c167",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sigmoid(output):\n",
     "    # output результат X@w (-inf, +inf)\n",
-    "    \"\"\"\n",
-    "    YOUR CODE IS HERE\n",
-    "    \"\"\"\n",
-    "    pass"
+    "    \n",
+    "    return np.exp(output) / (np.exp(output) + 1)   "
    ]
   },
   {
@@ -2202,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "057a5d74-5e8f-4949-a068-8d20c464869e",
    "metadata": {},
    "outputs": [],
@@ -2223,11 +2220,10 @@
     "    # So I want escape log(0)\n",
     "    y_pred = np.clip(y_pred, eps, 1 - eps)\n",
     "    \n",
-    "    \"\"\"\n",
-    "    YOUR CODE IS HERE\n",
-    "    \"\"\"\n",
-    "    pass\n",
-    "    \n",
+    "    bce_value = - np.sum(y_true * log(sigmoid(y_pred)) + (1 - y_true) * log(1 - sigmoid(y_pred)))\n",
+    "\n",
+    "    return bce_value\n",
+    "\n",
     "\n",
     "def bce_grad(y_true, y_pred, X):\n",
     "    \"\"\"\n",
@@ -2241,10 +2237,7 @@
     "    if  y_true.shape[0] != y_pred.shape[0]:\n",
     "        raise ValueError(\"Number of samples in both vectors should be equal\")\n",
     "        \n",
-    "    \"\"\"\n",
-    "    YOUR CODE IS HERE\n",
-    "    \"\"\"\n",
-    "    pass\n",
+    "    return np.T(X) * (sigmoid(y_pred) - y_true)\n",
     "\n",
     "\n",
     "class BCELoss:\n",
