--- a/l5_ensembles/code/Ensembles.ipynb
+++ b/l5_ensembles/code/Ensembles.ipynb
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "ca825b91",
+   "id": "dea2f19c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f6e8da",
+   "id": "083b4c6c",
    "metadata": {},
    "source": [
     "При низком max_depth (от 1 до 5) высокий Bias. С 9 до 15 max_depth - начинает быть высоким variance (модель начинает реагироать на шум в данных). max_depth 7-8 более менее."
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "32fbbf55",
+   "id": "55a47a6c",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 477,
-   "id": "23bd85f9",
+   "id": "c234850c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 478,
-   "id": "da8b4d8a",
+   "id": "62d827b1",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 532,
-   "id": "7a3e1521",
+   "id": "837e9d00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 533,
-   "id": "7232d4c5",
+   "id": "90d75498",
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 534,
-   "id": "ec18b9d0",
+   "id": "28570e79",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 535,
-   "id": "05c01065",
+   "id": "30eb1d9c",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 571,
-   "id": "615317e6",
+   "id": "f92ebb6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 572,
-   "id": "635e0899",
+   "id": "8251ec0a",
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "0baeaf44",
+   "id": "106aa31c",
    "metadata": {},
    "source": [
     "LogisticRegression:      0.850\n",
@@ -1649,7 +1649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5d00b30",
+   "id": "e2c75e54",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1657,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01f6bece",
+   "id": "dd03fbdc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1665,7 +1665,7 @@
   {
    "cell_type": "code",
    "execution_count": 631,
-   "id": "ca80c491",
+   "id": "4b73b9ac",
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c59835ca",
+   "id": "a89d336f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3104484f",
+   "id": "8bb4b1c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1777,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": 667,
-   "id": "28c2a232",
+   "id": "586bb991",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1791,7 +1791,7 @@
   {
    "cell_type": "code",
    "execution_count": 668,
-   "id": "b1e2ebe0",
+   "id": "800c63f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 669,
-   "id": "d39775e1",
+   "id": "d28bcc5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1813,7 +1813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96866fd6",
+   "id": "3b0c5815",
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2453,22 @@
       "[LightGBM] [Warning] bagging_fraction is set=0.7, subsample=1.0 will be ignored. Current value: bagging_fraction=0.7\n",
       "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n",
       "1647198201.780108: 192/8191 classifiers: 3\n",
-      "[20:03:23] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+      "[20:03:23] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[20:03:36] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[20:03:37] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[20:03:39] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "1647198219.9011006: 193/8191 classifiers: 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20:03:40] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[20:03:41] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[20:03:43] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[20:03:44] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "1647198224.177851: 194/8191 classifiers: 3\n"
      ]
     }
    ],
@@ -2474,7 +2489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39c9ee87",
+   "id": "90c9b5c9",
    "metadata": {},
    "source": [
     "1647197904.8330529 time\n",
@@ -2484,7 +2499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6947aa6",
+   "id": "00356593",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2492,7 +2507,7 @@
   {
    "cell_type": "code",
    "execution_count": 655,
-   "id": "48a5bd08",
+   "id": "12502ade",
    "metadata": {},
    "outputs": [
     {
@@ -14269,14 +14284,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f55d72",
+   "id": "97dc45c8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "11fe4044",
+   "id": "198b1c23",
    "metadata": {},
    "source": [
     "[[(('DT',\n",
@@ -14291,7 +14306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "792dcca3",
+   "id": "d6aae995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14319,7 +14334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb254a32",
+   "id": "7b7bb3da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14332,7 +14347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "843512d3",
+   "id": "098daa6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14374,7 +14389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5462ff86",
+   "id": "e533292d",
    "metadata": {},
    "source": [
     "#### 3.1. EDA"
@@ -14383,7 +14398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b32b913",
+   "id": "b1fc2d4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14393,7 +14408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d93135c8",
+   "id": "1ca8f133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14403,7 +14418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dce8943b",
+   "id": "fc6b86e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14413,7 +14428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6211b1d",
+   "id": "3e3ae912",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14427,7 +14442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5647cd0a",
+   "id": "46854b6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14438,7 +14453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dde781bd",
+   "id": "7f491820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14451,7 +14466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3933793e",
+   "id": "2ee68b3a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14459,7 +14474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90898d32",
+   "id": "a3161dd1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14467,7 +14482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37bf934d",
+   "id": "680dcc3c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14475,7 +14490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1de4b98",
+   "id": "0bcc5a11",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14483,14 +14498,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c89f67ec",
+   "id": "48ad0571",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "16f1d096",
+   "id": "2aa16b68",
    "metadata": {},
    "source": [
     "#### 3.2. Prepare data"
@@ -14499,7 +14514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d1ac930",
+   "id": "164a2f3b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14507,7 +14522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82d606e0",
+   "id": "0e90249d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14515,7 +14530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4b5286b",
+   "id": "4d8f537f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14523,7 +14538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d805b64",
+   "id": "c0728174",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14531,7 +14546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4b69e9c",
+   "id": "3f5e23b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -14590,7 +14605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ab7011",
+   "id": "41fca390",
    "metadata": {},
    "source": [
     "Было немного сложно."
@@ -14599,7 +14614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84b5b642",
+   "id": "235be7f1",
    "metadata": {},
    "outputs": [],
    "source": []
