--- a/l6_kaggle/code/dota2-win.ipynb
+++ b/l6_kaggle/code/dota2-win.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В двух ноутбуках. Этот первый.\n",
+    "\n",
+    "Лучше скор на каггле - 0.83641."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "papermill": {
      "duration": 0.036237,
@@ -5058,7 +5067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5070,7 +5079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5519,6 +5528,134 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# last"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_test = all_test.drop(['chat_len', 'lobby_type', 'game_mode'], axis=1)\n",
+    "all_train = all_train.drop(['chat_len', 'lobby_type', 'game_mode'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_train['d_health'] = 0\n",
+    "all_train['r_health'] = 0\n",
+    "\n",
+    "all_test['r_health'] = 0\n",
+    "all_test['d_health'] = 0\n",
+    "\n",
+    "for i in range(1, 6):\n",
+    "    all_train['d_health'] += all_train[f'd{i}_health'] \n",
+    "    all_train['r_health'] += all_train[f'r{i}_health'] \n",
+    "    \n",
+    "    all_train = all_train.drop([f'r{i}_health', f'd{i}_health',], axis=1)\n",
+    "    \n",
+    "    all_test['d_health'] += all_test[f'd{i}_health'] \n",
+    "    all_test['r_health'] += all_test[f'r{i}_health'] \n",
+    "    \n",
+    "    all_test = all_test.drop([f'r{i}_health', f'd{i}_health',], axis=1)\n",
+    "\n",
+    "all_train['max_health'] = np.where(all_train['d_health'] > 0,\n",
+    "                              all_train['r_health'] / all_train['d_health'],\n",
+    "                              all_train['r_health'])\n",
+    "\n",
+    "all_test['max_health'] = np.where(all_test['d_health'] > 0,\n",
+    "                              all_test['r_health'] / all_test['d_health'],\n",
+    "                              all_test['r_health'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_train['d_sen_placed'] = 0\n",
+    "all_train['r_sen_placed'] = 0\n",
+    "\n",
+    "all_test['d_sen_placed'] = 0\n",
+    "all_test['r_sen_placed'] = 0\n",
+    "\n",
+    "for i in range(1, 6):\n",
+    "    all_train['d_sen_placed'] += all_train[f'd{i}_sen_placed'] \n",
+    "    all_train['r_sen_placed'] += all_train[f'r{i}_sen_placed'] \n",
+    "    \n",
+    "    all_train = all_train.drop([f'r{i}_sen_placed', f'd{i}_sen_placed',], axis=1)\n",
+    "    \n",
+    "    all_test['d_sen_placed'] += all_test[f'd{i}_sen_placed'] \n",
+    "    all_test['r_sen_placed'] += all_test[f'r{i}_sen_placed'] \n",
+    "    \n",
+    "    all_test = all_test.drop([f'r{i}_sen_placed', f'd{i}_sen_placed',], axis=1)\n",
+    "\n",
+    "    \n",
+    "all_train['rat_sen_placed'] = np.where(all_train['d_sen_placed'] > 0,\n",
+    "                                   all_train['r_sen_placed'] / all_train['d_sen_placed'],\n",
+    "                                   all_train['r_sen_placed'])\n",
+    "\n",
+    "all_test['rat_sen_placed'] = np.where(all_test['d_sen_placed'] > 0,\n",
+    "                                   all_test['r_sen_placed'] / all_test['d_sen_placed'],\n",
+    "                                   all_test['r_sen_placed'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_train['d_max_health'] = 0\n",
+    "all_train['r_max_health'] = 0\n",
+    "\n",
+    "all_test['r_max_health'] = 0\n",
+    "all_test['d_max_health'] = 0\n",
+    "\n",
+    "for i in range(1, 6):\n",
+    "    all_train['d_max_health'] += all_train[f'd{i}_max_health'] \n",
+    "    all_train['r_max_health'] += all_train[f'r{i}_max_health'] \n",
+    "    \n",
+    "    all_train = all_train.drop([f'r{i}_max_health', f'd{i}_max_health',], axis=1)\n",
+    "    \n",
+    "    all_test['d_max_health'] += all_test[f'd{i}_max_health'] \n",
+    "    all_test['r_max_health'] += all_test[f'r{i}_max_health'] \n",
+    "    \n",
+    "    all_test = all_test.drop([f'r{i}_max_health', f'd{i}_max_health',], axis=1)\n",
+    "\n",
+    "all_train['rat_max_health'] = all_train['r_max_health'] / all_train['d_max_health'] \n",
+    "all_test['rat_max_health'] = all_test['r_max_health'] / all_test['d_max_health'] \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 6):\n",
+    "    all_train[f'r{i}_xy'] = (all_train[f'r{i}_x'] + all_train[f'r{i}_y']) / 2\n",
+    "    all_train[f'd{i}_xy'] = (all_train[f'd{i}_x'] + all_train[f'd{i}_y']) / 2\n",
+    "    \n",
+    "    all_test[f'r{i}_xy'] = (all_test[f'r{i}_x'] + all_test[f'r{i}_y']) / 2\n",
+    "    all_test[f'd{i}_xy'] = (all_test[f'd{i}_x'] + all_test[f'd{i}_y']) / 2\n",
+    "    \n",
+    "    all_test = all_test.drop([f'r{i}_x', f'd{i}_x', f'r{i}_y', f'd{i}_y'], axis=1)\n",
+    "    all_train = all_train.drop([f'r{i}_x', f'd{i}_x', f'r{i}_y', f'd{i}_y'], axis=1)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5537,7 +5674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5550,7 +5687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14394,15 +14531,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[19:29:06] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "Файл посылки сохранен, как: submission_2022-04-03_19-29-09.csv\n"
+      "[22:40:21] WARNING: ../src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "Файл посылки сохранен, как: submission_2022-04-03_22-40-25.csv\n"
      ]
     }
    ],
@@ -14429,7 +14566,7 @@
     "y_test_pred = voting_soft.predict_proba(test_scaled)[:, 1]\n",
     "\n",
     "df_submission = pd.DataFrame({\"radiant_win_prob\": y_test_pred}, \n",
-    "                                 index=df_test.index)\n",
+    "                                 index=all_test.index)\n",
     "\n",
     "submission_filename = \"submission_{}.csv\".format(\n",
     "    datetime.datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
